--- a/Dockerfile.spark-builder.yml
+++ b/Dockerfile.spark-builder.yml
@@ -1,12 +1,13 @@
 FROM python:3.11-slim-bookworm AS builder
 
-ARG AWS_SDK_VERSION=1.12.262
-ARG HADOOP_VERSION=3.4.1
+ARG AWS_SDK_VERSION=1.12.788
+ARG HADOOP_VERSION=3.3.4
 ARG SPARK_VERSION=3.5.6
 
 RUN apt update && \
     DEBIAN_FRONTEND=noninteractive apt install -y --no-install-recommends \
     curl \
+    procps \
     openjdk-17-jre-headless \
     && rm -rf /var/lib/apt/lists/*
 
