--- a/Dockerfile.spark-master.yml
+++ b/Dockerfile.spark-master.yml
@@ -14,7 +14,7 @@ ENV PATH="${SPARK_HOME}/bin:${SPARK_HOME}/sbin:${PATH}"
 ENV SPARK_MASTER_PORT=7077
 ENV SPARK_MASTER_WEBUI_PORT=8080
 # executa o spark em foreground
-ENV SPARK_NO_DEMONIZE=true
+ENV SPARK_NO_DAEMONIZE=true
 ENV PYSPARK_PYTHON="/usr/local/bin/python3"
 ENV PYSPARK_DRIVER_PYTHON="/usr/local/bin/python3"
 
